@@ -19,6 +19,7 @@
 #include <libxml/valid.h>
 #include <libxml/hash.h>
 #include <libxml/xmlerror.h>
+#include <libxml/parserInternals.h>
 #include "xslt.h"
 #include "xsltInternals.h"
 #include "pattern.h"
@@ -481,7 +482,28 @@ xsltParseTemplateContent(xsltStylesheetPtr style, xsltTemplatePtr ret,
 			xsltGenericError(xsltGenericErrorContext,
 	     "xsltParseStylesheetTemplate: xslt:text content problem\n");
 		    } else {
+			xmlChar *prop;
 			xmlNodePtr text = cur->children;
+			
+			prop = xmlGetNsProp(cur,
+				(const xmlChar *)"disable-output-escaping",
+				            XSLT_NAMESPACE);
+			if (prop != NULL) {
+			    if (xmlStrEqual(prop, (const xmlChar *)"yes")) {
+#if LIBXML_VERSION > 20211
+				text->name = xmlStringTextNoenc;
+#else
+				xsltGenericError(xsltGenericErrorContext,
+"xsl:text disable-output-escaping need newer > 20211 libxml version\n");
+#endif
+			    } else if (!xmlStrEqual(prop,
+					            (const xmlChar *)"no")){
+				xsltGenericError(xsltGenericErrorContext,
+		 "xslt:text: disable-output-escaping allow only yes or no\n");
+
+			    }
+			    xmlFree(prop);
+			}
 			xmlUnlinkNode(text);
 			xmlAddPrevSibling(cur, text);
 		    }
