@@ -10,12 +10,14 @@
 #include <libxml/xmlversion.h>
 #include <libxml/xmlmemory.h>
 #include <libxml/debugXML.h>
+#include <libxml/HTMLtree.h>
 #include <libxslt/xslt.h>
 #include <libxslt/xsltInternals.h>
 #include <libxslt/transform.h>
 #include <libxslt/xsltutils.h>
 
 static int debug = 0;
+static int repeat = 0;
 
 int
 main(int argc, char **argv) {
@@ -23,6 +25,7 @@ main(int argc, char **argv) {
     xsltStylesheetPtr cur;
     xmlDocPtr doc, res;
 
+    /* --repeat : repeat 100 times, for timing or profiling */
     LIBXML_TEST_VERSION
     for (i = 1; i < argc ; i++) {
 	if ((!strcmp(argv[i], "-debug")) || (!strcmp(argv[i], "--debug"))) {
@@ -31,6 +34,9 @@ main(int argc, char **argv) {
 		   (!strcmp(argv[i], "-verbose")) ||
 		   (!strcmp(argv[i], "--verbose"))) {
 	    xsltSetGenericDebugFunc(stderr, NULL);
+	} else if ((!strcmp(argv[i], "-repeat")) ||
+		   (!strcmp(argv[i], "--repeat"))) {
+	    repeat++;
 	}
     }
     xmlSubstituteEntitiesDefault(1);
@@ -53,18 +59,29 @@ main(int argc, char **argv) {
 	    fprintf(stderr, "unable to parse %s\n", argv[i]);
 	    continue;
 	}
+	if (repeat) {
+	    int j;
+	    for (j = 0;j < 99; j++) {
+		res = xsltApplyStylesheet(cur, doc);
+		xmlFreeDoc(res);
+		xmlFreeDoc(doc);
+		doc = xmlParseFile(argv[i]);
+	    }
+	}
 	res = xsltApplyStylesheet(cur, doc);
 	xmlFreeDoc(doc);
 	if (res == NULL) {
 	    fprintf(stderr, "no result for %s\n", argv[i]);
 	    continue;
 	}
+	if (cur->methodURI == NULL) {
 #ifdef LIBXML_DEBUG_ENABLED
-	if (debug)
-            xmlDebugDumpDocument(stdout, res);
-	else
+	    if (debug)
+		xmlDebugDumpDocument(stdout, res);
+	    else
 #endif
-	    xmlDocDump(stdout, res);
+		xsltSaveResultToFile(stdout, res, cur);
+	}
 
 	xmlFreeDoc(res);
     }
