@@ -5,8 +5,8 @@ $(top_builddir)/libxslt/xsltproc:
 
 test: $(top_builddir)/libxslt/xsltproc
 	@(rm -f .memdump ; touch .memdump)
-	@($(top_builddir)/libxslt/xsltproc doc.xsl doc.xml > doc.res ; \
-	diff result.xml doc.res ; \
+	@($(top_builddir)/libxslt/xsltproc vrml.xsl data.xml > vrml.res ; \
+	diff vrml.xml vrml.res ; \
 	grep "MORY ALLO" .memdump  | grep -v "MEMORY ALLOCATED : 0";\
 	rm -f doc.res)
 
